[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["subhash ajmera <subhashajmera2@gmail.com>"]
readme = "README.md"
package-mode=false
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.44.0"
openai = "^1.68.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
